--- a/html/03_course.html
+++ b/html/03_course.html
@@ -105,7 +105,7 @@
 						<!-- バンド系コース -->
 						<section class="mt40 cols nega gutter-20 gutter-sm-10 view view-slideup">
 							<div class="col-12">
-								<h3 class="ribbon-green">バンド系コース</h3>
+								<h3 class="ribbon-green -lightgray">バンド系コース</h3>
 							</div>
 							<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt20">
 								<a href="/vocal" class="hov course1"><span>vocal</span>ボーカル</a>
@@ -129,7 +129,7 @@
 						<!-- クラシック系・弦楽器コース -->
 						<section class="mt60 sm-mt40 cols nega gutter-20 gutter-sm-10 view view-slideup">
 							<div class="col-12">
-								<h3 class="ribbon-blue">クラシック系・弦楽器コース</h3>
+								<h3 class="ribbon-blue -lightgray">クラシック系・弦楽器コース</h3>
 							</div>
 							<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt20">
 								<a href="/piano" class="hov course7"><span>piano</span>ピアノ</a>
@@ -150,7 +150,7 @@
 						<!-- 管楽器・打楽器系コース -->
 						<section class="mt60 sm-mt40 cols nega gutter-20 gutter-sm-10 view view-slideup">
 							<div class="col-12">
-								<h3 class="ribbon-green">管楽器・打楽器系コース</h3>
+								<h3 class="ribbon-green -lightgray">管楽器・打楽器系コース</h3>
 							</div>
 							<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt20">
 								<a href="/flute" class="hov course12"><span>flute</span>フルート</a>
@@ -168,7 +168,7 @@
 						<!-- その他のコース -->
 						<section class="mt60 sm-mt40 cols nega gutter-20 gutter-sm-10 view view-slideup">
 							<div class="col-12">
-								<h3 class="ribbon-blue">その他のコース</h3>
+								<h3 class="ribbon-blue -lightgray">その他のコース</h3>
 							</div>
 							<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt20">
 								<a href="/lyrics" class="hov course16"><span>lyrics / composition</span>作詞・作曲 / 音楽理論</a>
