--- a/html/06_bass.html
+++ b/html/06_bass.html
@@ -32,7 +32,7 @@
 </head>
 </head>
 
-<body id="price" class="uf">
+<body id="bass" class="uf">
 
 
 <!-- header -->
@@ -86,47 +86,60 @@
 	
 		<!-- #hero -->
 		<div class="hero view view-slideup">
-			<div class="ptb200 md-ptb160 sm-ptb100" style="background: url('../img/price/hero.jpg') no-repeat center / cover ;">
+			<div class="ptb200 md-ptb160 sm-ptb100" style="background: url('../img/vocal/hero.jpg') no-repeat center / cover ;">
 			</div>		
 		</div>
 
-		<div class="bgc-white pt100 sm-pt50">
-
-			<!-- anchor -->
-			<div class="cols jc-c view view-slideup">
-				<div class="col-4 col-sm-12">
-					<a href="#sec1" class="d-b btn-anchor fw-b hov bd-black ptb15 plr30">基本レッスン料金</a>
-				</div>
-				<div class="col-4 col-sm-12 sm-mt10">
-					<a href="#sec2" class="d-b btn-anchor fw-b hov bd-black ptb15 plr30">入会金・体験料・入会特典</a>
-				</div>
-			</div>
-			<div class="cols jc-c view view-slideup">
-				<div class="col-4 col-sm-12 mt30 sm-mt10">
-					<a href="#sec3" class="d-b btn-anchor fw-b hov bd-black ptb15 plr30">お支払い方法</a>
-				</div>
-				<div class="col-4 col-sm-12 mt30 sm-mt10">
-					<a href="#sec4" class="d-b btn-anchor fw-b hov bd-black ptb15 plr30">入会・退会規定</a>
-				</div>
-			</div>
-
-			<!-- #sec1 -->
-			<section id="sec1" class="bgc-lightgray bg-nami mt130 sm-mt90 pb70">
-				<div class="cols gutter-40">
-					<div class="col-12 ta-c view view-slideup">
-						<div class="mt-70 md-mt-60 sm-mt-50 d-ib">
-							<p class="ff-en fz350 lh180">lesson fee</p>
-							<h2>基本レッスン料金</h2>
-							<img src="../img/base/ic-dot.png" width="20" height="5" class="img-rspsv" alt="dot">
+		<!-- #sec1 -->
+		<section id="sec1" class="mt120 sm-mt70">
+			<div class="ptb20 sm-ptb30 cols-wide bg-dots">
+				<div class="cols jc-c ai-c gutter-70 gutter-md-40">
+					<div class="col-6 col-sm-12">
+						<div class="ttl">
+							<p class="ff-en fz350 lh180">Bass</p>
+							<h2>ベース</h2>
 						</div>
+						<p class="mt30">音色は地味ですがバンドには絶対欠かすことが出来ない楽器です。多くのベーシストは「俺がこの曲を支えているんだ」という強い責任感を感じながら演奏することでしょう。</p>
+						<p class="mt15">弦の押さえ方など基礎が最も大切となる楽器です。じっくりとあせらず練習を重ねていきましょう。</p>
+					</div>
+					<div class="col-6 col-sm-10 sm-mt40">
+						<figure><img src="../img/bass/sec1-img1.png" width="446" height="437" class="img-rspsv" alt="ベース"></figure>
 					</div>
 				</div>
-			</section>
+			</div>
+		</section>
+					
+		<!-- #sec2 -->
 
-			<!-- #sec2 -->
+		<!-- #sec3 -->
 
-			<!-- #sec3 -->
-	
+		<!-- #sec4 -->
+		<section id="sec4" class="course-link pb40 bgc-lightgray sm-plr20">
+			<div class="cols gutter-20 gutter-sm-10">
+				<div class="col-12 mt-20">
+					<h3 class="ribbon-black -lightgray">バンド系コース</h3>
+				</div>
+				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt20">
+					<a href="/vocal" class="hov course1"><span>vocal</span>ボーカル</a>
+				</div>
+				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt20">
+					<a href="/guitar" class="hov course2"><span>guitar</span>ギター</a>
+				</div>
+				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt10">
+					<a href="/bass" class="hov course3"><span>bass</span>ベース</a>
+				</div>
+				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt10">
+					<a href="/drums" class="hov course4"><span>drums</span>ドラム</a>
+				</div>
+				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt10">
+					<a href="/keyboard" class="hov course5"><span>keyboard</span>ベース</a>
+				</div>
+				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt10">
+					<a href="/dtm" class="hov course6"><span>DTM</span>デスクトップミュージック</a>
+				</div>
+			</div>
+		</section>
+
 	</section>
 </main>
 
