--- a/html/36_company.html
+++ b/html/36_company.html
@@ -93,7 +93,7 @@
 		<div class="bgc-white pt100 sm-pt50">
 
 			<!-- anchor -->
-			<div class="cols">
+			<div class="cols view view-slideup">
 				<div class="col-4 col-sm-12">
 					<a href="#sec1" class="d-b btn-anchor fw-b hov bd-black ptb15 plr30">会社概要</a>
 				</div>
@@ -135,7 +135,7 @@
 							</tbody>
 						</table>
 					</div>
-					<section class="col-12 mt80 sm-mt60">
+					<section class="col-12 mt80 sm-mt60 view view-slideup">
 						<h3 class="bb-black fz120 d-ib pb10">代表経歴・メッセージ</h3>
 						<div class="cols jc-c ai-c nega gutter-50 gutter-sm-30">
 							<div class="col-5 col-sm-10 mt30">
