--- a/html/22_nagoya-meito.html
+++ b/html/22_nagoya-meito.html
@@ -32,7 +32,7 @@
 </head>
 </head>
 
-<body id="recruit" class="uf">
+<body id="nagoya-meito" class="uf">
 
 
 <!-- header -->
@@ -86,120 +86,203 @@
 	
 		<!-- #hero -->
 		<div class="hero view view-slideup">
-			<div class="ptb200 md-ptb160 sm-ptb100" style="background: url('../img/recruit/hero.jpg') no-repeat center / cover ;">
+			<div class="ptb200 md-ptb160 sm-ptb100" style="background: url('../img/school/hero.jpg') no-repeat center / cover ;">
 			</div>		
 		</div>
 
 		<!-- #sec1 -->
-		<section id="sec1" class="mt120 sm-mt70 pb130 md-pb100 sm-pb80">
-			<div class="pb70 sm-pb50 cols-wide bg-dots ta-c">
-				<div class="mt-40 md-mt-25 sm-mt-15 d-ib view view-slideup">
-					<h2 class="ff-mi fz300 md-fz250 sm-fz200 lh160">採用情報</h2>
-					<p class="ff-en fz130">recruit</p>
-					<img src="../img/base/ic-dot.png" width="20" height="5" class="img-rspsv" alt="dot">
-					<p class="mt50 sm-mt30">以下の教室で講師を募集しております。<br>その他の講師も随時募集しておりますので<br class="d-n sm-d-b">お気軽にお問合せください。</p>
+		<section id="sec1" class="mt120 md-mt70 cols sm-jc-fe gutter-sm-40">
+			<div class="col-8 col-sm-12 view view-slideup">
+				<div class="bgc-white bdrs15 pt70 pb70 sm-pt40 pl70 pr100 md-pl50 md-pr70 sm-pl30 sm-pr30">
+					<div class="d-f sm-d-b ai-c">
+						<h2 class="fz180 sm-fz130">名古屋名東教室</h2>
+						<p class="ff-sofia pl30 sm-pl0">Nagoya meito school</p>
+						</div>
+					<p class="mt20">2019年11月、名古屋に2店舗目となる教室がOPENしました。<br>
+						バンドリハができるスタジオやグランドピアノのお部屋など、<br class="md-d-n">計8部屋完備。<br>
+						音楽に没頭できる最高の環境が整っています！</p>
+					<p class="mt15 fz90">※保護者の引率、レッスン観覧が可能です。</p>
 				</div>
-				<div class="cols gutter-sm-20 ta-l view view-slideup mt30">
-					<section class="col-4 col-md-6 mt40">
-						<h3 class="ptb20 sm-ptb15 plr10 bb-black bt-black d-b">岡崎大西教室</h3>
-						<ul class="mt30 li-dots">
-							<li>ボーカル講師</li>
-							<li>ピアノ講師</li>
-						</ul>
+			</div>
+			<div class="col-5 col-sm-10 return-1 sm-mt-30 view view-slideup">
+				<figure><img src="../img/nagoya-meito/sec1-img1.png" width="388" height="379" class="img-rspsv" alt="名古屋名東教室"></figure>
+			</div>
+			<div class="col-4 col-sm-12 mt70 view view-slideup">
+				<figure><img src="../img/nagoya-meito/sec1-img2.jpg" width="301" height="220" class="img-rspsv-full" alt="名古屋名東教室"></figure>
+			</div>
+			<div class="col-4 col-sm-12 mt70 sm-mt10 view view-slideup">
+				<figure><img src="../img/nagoya-meito/sec1-img3.jpg" width="301" height="220" class="img-rspsv-full" alt="名古屋名東教室"></figure>
+			</div>
+			<div class="col-4 col-sm-12 mt70 sm-mt10 view view-slideup">
+				<figure><img src="../img/nagoya-meito/sec1-img4.jpg" width="301" height="220" class="img-rspsv-full" alt="名古屋名東教室"></figure>
+			</div>
+		</section>
+					
+		<!-- #sec2 -->
+		<section id="sec2" class="bg-dots mt120 pb100 sm-pb50 mb130 md-mb100 sm-mb80">
+			<div class="cols gutter-30 gutter-sm-40 jc-c">
+				<div class="col-12 ta-c view view-slideup">
+					<div class="mt-40 md-mt-30 sm-mt-20 d-ib">
+						<p class="ff-en fz300 sm-fz240 lh180">school data</p>
+						<h2>school data</h2>
+						<img src="../img/base/ic-dot.png" width="20" height="5" class="img-rspsv" alt="dot">
+					</div>
+				</div>
+				<div class="col-12 view view-slideup">
+					<table class="tbl-basic mt50 sm-mt40">
+						<tbody>
+							<tr>
+								<th>部屋数</th>
+								<td>8室　全室禁煙</td>
+							</tr>
+							<tr>
+								<th>駐車場</th>
+								<td>16台</td>
+							</tr>
+							<tr>
+								<th>住所</th>
+								<td>愛知県名古屋市名東区牧の里1-111<br class="d-n sm-d-b">（旧ジュークボックス）<br>
+									<a href="" class="hov bb-black pb5" target="_blank">→ Googlemap</a></td>
+							</tr>
+							<tr>
+								<th>電話番号 / FAX</th>
+								<td><a href="tel:0527848419" class="tel-link hov">052-784-8419</a></td>
+							</tr>
+							<tr>
+								<th>スタッフ常駐時間</th>
+								<td>平日 15：00～21：00<br>
+									土日 10：00～18：00<br>
+									<span class="fz80">※レッスン可能時間はこの限りではありません<br>
+									※上記時間内でもスタッフ不在の場合がございます。ご来店の際は必ずお電話をいただいてからお越しください。</span></td>
+							</tr>
+						</tbody>
+					</table>
+					<section class="mt80 sm-mt50 bgc-gray bd-blue ptb60 plr60 md-ptb50 md-plr15 sm-ptb50 sm-plr30 bdrs15 fuchi-upper">
+						<div class="cols nega lesson-ok-il">
+							<div class="col-4 col-sm-12">
+								<h3 class="ribbon-green -gray">レッスン可能コース</h3>
+							</div>
+							<div class="col-8 col-sm-12 sm-mt25">
+								<p>ピアノ・ボーカル・ギター・ベース・ドラム・キーボード・ウクレレ ・バイオリン・チェロ・ビオラ・フルート・サックス・トランペット・トロンボーン・クラリネット・声楽・作詞作曲・カホン・リトミック</p>
+							</div>
+						</div>
 					</section>
-					<section class="col-4 col-md-6 mt40">
-						<h3 class="ptb20 sm-ptb15 plr10 bb-black bt-black d-b">岡崎矢作教室</h3>
-						<ul class="mt30 li-dots">
-							<li>ドラム講師 </li>
-						</ul>
-					</section>
-					<section class="col-4 col-md-6 mt40">
-						<h3 class="ptb20 sm-ptb15 plr10 bb-black bt-black d-b">名古屋名東教室</h3>
-						<ul class="mt30 li-dots">
-							<li>ピアノ講師</li>
-						</ul>
-					</section>
-					<section class="col-4 col-md-6 mt40">
-						<h3 class="ptb20 sm-ptb15 plr10 bb-black bt-black d-b">岡崎矢作教室</h3>
-						<ul class="mt30 li-dots">
-							<li>ピアノ講師</li>
-							<li>バイオリン講師</li>
-							<li>ドラム講師</li>
-						</ul>
-					</section>
-					<section class="col-4 col-md-6 mt40">
-						<h3 class="ptb20 sm-ptb15 plr10 bb-black bt-black d-b">刈谷アピタ教室</h3>
-						<ul class="mt30 li-dots">
-							<li>ボーカル講師</li>
-							<li>ピアノ講師</li>
-						</ul>
-					</section>
-					<section class="col-4 col-md-6 mt40">
-						<h3 class="ptb20 sm-ptb15 plr10 bb-black bt-black d-b">その他募集地域</h3>
-						<ul class="mt30 li-dots">
-							<li>ピアノ講師募集（講師派遣）<br>
-								愛知県全域<br>
-								名古屋市（名古屋、尾張地区）三河地区</li>
-						</ul>
-					</section>
+					<div class="embed-16-9 mt100 sm-mt70">
+						<iframe class="embed-item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3262.033287611277!2d137.00213875178196!3d35.155790566117666!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x600365761cb5d47f%3A0x42493d27b474851!2z44OR44OU44O844Of44Ol44O844K444OD44Kv44K544Kv44O844Or5ZCN5Y-k5bGL5ZCN5p2x5pWZ5a6k!5e0!3m2!1sja!2sjp!4v1639185331789!5m2!1sja!2sjp" width="446" height="416" style="border:0;filter:grayscale(60%);-webkit-filter:grayscale(60%)" allowfullscreen></iframe>
+					</div>
 				</div>
 			</div>
 		</section>
 
-		<!-- #sec2 -->
-		<section id="sec2" class="bgc-lightgray bg-nami pb100 sm-pb50 mb130 md-mb100 sm-mb80">
-			<div class="cols gutter-40 jc-c">
-				<div class="col-12 ta-c view view-slideup">
-					<div class="mt-70 md-mt-60 d-ib">
-						<p class="ff-en fz300 sm-fz240 lh180">application</p>
-						<h2>募集要項</h2>
-						<img src="../img/base/ic-dot.png" width="20" height="5" class="img-rspsv" alt="dot">
-					</div>
+		<!-- #sec3 -->
+		<section id="sec3" class="ptb100 sm-ptb70 bgc-lightgray">
+			<div class="cols">
+				<div class="col-12 ord1">
+					<p class="ff-en fz270 lh100">studio rental</p>
+					<h2 class="fz110 sm-fz100 mt10">スタジオレンタルについて</h2>
 				</div>
-				<section class="col-12 mt50 view view-slideup">
-					<div class="bgc-white p60 md-p40 md-p30 bdrs15 h-eq">
-						<table class="tbl-basic th-w240">
+				<section class="col-6 col-sm-12 mt50 sm-mt30 view view-slideup ord2 sm-ord3">
+					<div class="bgc-white p40 md-p30 bdrs15 h-eq">
+						<ul class="li-dots">
+							<li>バンドスタジオ（8畳）</li>
+							<li>グランドピアノルーム（8畳）</li>
+							<li>パーティールーム（16畳）</li>
+						</ul>
+						<table class="tbl-basic mt20 va-m p-small">
 							<tbody>
 								<tr>
-									<th>仕事内容</th>
-									<td>音楽講師</td>
+									<th>平日<br class="sm-d-n">
+										<span class="fz80">(15：00～17：00)</span></th>
+									<td>¥1,300 / 1時間</td>
 								</tr>
 								<tr>
-									<th>採用メッセージ</th>
-									<td>「音楽が好き」そんな気持ちをお仕事に活かしませんか！WワークOK♪趣味の音楽とも両立できます。子育ての落ち着いた主婦さんもご都合に合わせて働けます。すでに講師をしている方でもOK！教える経験がなくても歌が好きな方なら未経験でも大丈夫◎<br>
-									音楽を通じてやりがいを感じながら働きたい方や、生徒の成長を肌で感じたい方は是非！ご連絡お待ちしております♪</td>
-								</tr>
-								<tr>
-									<th>求めている人材 ・条件</th>
-									<td>■ 人と接することが好きな方<br>
-										■ 好きを仕事にしたい方<br>
-										■ 楽器の楽しさを伝えたい方<br>
-										■ 困っている人を助けるのが好きな方<br>
-										■ ついつい相談に乗ってしまっていることがある方<br>
-										■ 時間を守るのは大事！と思う方<br>
-										■ 大学で音楽を専攻されている方もOK！<br>
-										■ 何と言っても音楽が好き！という方<br>
-										<br>
-										主に初心者をレッスンしていただきます。レッスン時間は主に「平日の夕方～夜」や「土日の朝～夜」にお願いすることが多いですが、週1回の短時間でも大丈夫です。ご都合に合わせて、お気軽にご相談ください。他の教室では20～40歳くらいの方が活躍中です。<br>
-										<br>
-										交通費補助あり<br>
-										まずは電話にてお気軽にお問い合わせください。<br>
-										0564-64-5349【本部】</td>
-								</tr>
-								<tr>
-									<th>会社概要</th>
-									<td>パピーミュージックスクール （<a href="/company" class="bb-black">会社案内</a>）<br>
-									三河地区を中心に開業して生徒数は1900人を超えるマンモス教室となりました。楽しいスタッフに囲まれて一緒に成長していきましょう！！</td>
+									<th>土日祝・平日<br class="sm-d-n">
+										<span class="fz80">(17：00～21：00)</span></th>
+									<td>¥1,800 / 1時間</td>
 								</tr>
 							</tbody>
 						</table>
 					</div>
 				</section>
-				<div class="mt50 col-6 col-md-8 col-sm-11">
-					<a href="/contact" class="d-b ta-c fw-b hov c-blue bd-blue bdrs-max ptb10 plr40">ご応募・お問合わせはフォームから！</a>
+				<section class="col-6 col-sm-12 mt50 sm-mt30 view view-slideup ord3 sm-ord2">
+					<figure><img src="../img/nagoya-meito/sec3-img1.jpg" width="469" height="350" class="img-rspsv-full" alt="スタジオレンタルについて"></figure>
+				</section>
+				<section class="col-6 col-sm-12 mt30 view view-slideup ord4">
+					<div class="bgc-white p40 md-p30 bdrs15 h-eq">
+						<ul class="li-dots">
+							<li>ドラム個人スタジオ</li>
+						</ul>
+						<table class="tbl-basic mt20 va-m p-small">
+							<tbody>
+								<tr>
+									<th>平日<br class="sm-d-n">
+										<span class="fz80">(15：00～17：00)</span></th>
+									<td>¥1,100 / 1時間</td>
+								</tr>
+								<tr>
+									<th>土日祝・平日<br class="sm-d-n">
+										<span class="fz80">(17：00～21：00)</span></th>
+									<td>¥1,600 / 1時間</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+				</section>
+				<section class="col-6 col-sm-12 mt30 view view-slideup ord5">
+					<div class="bgc-white p40 md-p30 bdrs15 h-eq">
+						<ul class="li-dots">
+							<li>アップライトピアノルーム</li>
+						</ul>
+						<table class="tbl-basic mt20 va-m p-small">
+							<tbody>
+								<tr>
+									<th>平日<br class="sm-d-n">
+										<span class="fz80">(15：00～17：00)</span></th>
+									<td>900 / 1時間</td>
+								</tr>
+								<tr>
+									<th>土日祝・平日<br class="sm-d-n">
+										<span class="fz80">(17：00～21：00)</span></th>
+									<td>¥1,100 / 1時間</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+				</section>
+				<div class="col-12 mt50 ord6">
+					<p class="fz90">※グランドピアノ＝カワイGE20<br>
+						※個人練習（一人で入室の方）は半額にてご利用いただけます。（予約日の前日から予約可能）<br>
+						※生徒さんは特別価格にてご利用いただけます。</p>
 				</div>
 			</div>
 		</section>
+
+		<!-- #sec4 -->
+		<div id="sec4" class="ptb60">
+			<div class="cols gutter-20 ta-l">
+				<section class="col-4 col-md-6">
+					<a href="/nagoya-meito" class="ptb20 sm-ptb15 plr10 bb-black bt-black d-b btn-ar"><h3>名古屋名東教室</h3></a>
+				</section>
+				<section class="col-4 col-md-6">
+					<a href="/nagoya-minato" class="ptb20 sm-ptb15 plr10 bb-black bt-black d-b btn-ar"><h3>名古屋みなと教室</h3></a>
+				</section>
+				<section class="col-4 col-md-6 md-mt30">
+					<a href="/okazaki-onishi" class="ptb20 sm-ptb15 plr10 bb-black bt-black d-b btn-ar"><h3>岡崎大西教室</h3></a>
+				</section>
+				<section class="col-4 col-md-6 mt30">
+					<a href="/okazaki-yahagi" class="ptb20 sm-ptb15 plr10 bb-black bt-black d-b btn-ar"><h3>岡崎矢作教室</h3></a>
+				</section>
+				<section class="col-4 col-md-6 mt30">
+					<a href="/kariya" class="ptb20 sm-ptb15 plr10 bb-black bt-black d-b btn-ar"><h3>刈谷アピタ教室</h3></a>
+				</section>
+				<section class="col-4 col-md-6 mt30">
+					<a href="/anjyo" class="ptb20 sm-ptb15 plr10 bb-black bt-black d-b btn-ar"><h3>安城今池教室</h3></a>
+				</section>
+				<section class="col-4 col-md-6 mt30">
+					<a href="/gamagori" class="ptb20 sm-ptb15 plr10 bb-black bt-black d-b btn-ar"><h3>蒲郡教室</h3></a>
+				</section>
+			</div>
+		</div>
 
 	</section>
 </main>
