--- a/html/28_gamagori.html
+++ b/html/28_gamagori.html
@@ -32,7 +32,7 @@
 </head>
 </head>
 
-<body id="price" class="uf">
+<body id="gamagori" class="uf">
 
 
 <!-- header -->
@@ -86,47 +86,60 @@
 	
 		<!-- #hero -->
 		<div class="hero view view-slideup">
-			<div class="ptb200 md-ptb160 sm-ptb100" style="background: url('../img/price/hero.jpg') no-repeat center / cover ;">
+			<div class="ptb200 md-ptb160 sm-ptb100" style="background: url('../img/school/hero.jpg') no-repeat center / cover ;">
 			</div>		
 		</div>
 
-		<div class="bgc-white pt100 sm-pt50">
-
-			<!-- anchor -->
-			<div class="cols jc-c view view-slideup">
-				<div class="col-4 col-sm-12">
-					<a href="#sec1" class="d-b btn-anchor fw-b hov bd-black ptb15 plr30">基本レッスン料金</a>
-				</div>
-				<div class="col-4 col-sm-12 sm-mt10">
-					<a href="#sec2" class="d-b btn-anchor fw-b hov bd-black ptb15 plr30">入会金・体験料・入会特典</a>
-				</div>
-			</div>
-			<div class="cols jc-c view view-slideup">
-				<div class="col-4 col-sm-12 mt30 sm-mt10">
-					<a href="#sec3" class="d-b btn-anchor fw-b hov bd-black ptb15 plr30">お支払い方法</a>
-				</div>
-				<div class="col-4 col-sm-12 mt30 sm-mt10">
-					<a href="#sec4" class="d-b btn-anchor fw-b hov bd-black ptb15 plr30">入会・退会規定</a>
-				</div>
-			</div>
-
-			<!-- #sec1 -->
-			<section id="sec1" class="bgc-lightgray bg-nami mt130 sm-mt90 pb70">
-				<div class="cols gutter-40">
-					<div class="col-12 ta-c view view-slideup">
-						<div class="mt-70 md-mt-60 sm-mt-50 d-ib">
-							<p class="ff-en fz350 lh180">lesson fee</p>
-							<h2>基本レッスン料金</h2>
-							<img src="../img/base/ic-dot.png" width="20" height="5" class="img-rspsv" alt="dot">
+		<!-- #sec1 -->
+		<section id="sec1" class="mt120 md-mt70 cols sm-jc-fe gutter-sm-40">
+			<div class="col-8 col-sm-12 view view-slideup">
+				<div class="bgc-white bdrs15 pt70 pb70 sm-pt40 pl70 pr100 md-pl50 md-pr70 sm-pl30 sm-pr30">
+					<div class="d-f sm-d-b ai-c">
+						<h2 class="fz180 sm-fz130">蒲郡教室</h2>
+						<p class="ff-sofia pl30 sm-pl0">Gamagori school</p>
 						</div>
-					</div>
+					<p class="mt20">蒲郡のカラオケ屋さんにてパピーミュージックスクールのレッスンをおこなっております。<br>
+						ボーカルはもとより、ギターやベースなどのコースも受付中です。広くてきれいなカラオケ屋さんで本格的な音響を使い、存分にレッスンをお楽しみください♪</p>
 				</div>
-			</section>
+			</div>
+			<div class="col-5 col-sm-10 return-1 sm-mt-30 view view-slideup">
+				<figure><img src="../img/gamagori/sec1-img1.png" width="388" height="379" class="img-rspsv" alt="蒲郡教室"></figure>
+			</div>
+		</section>
+					
+		<!-- #sec2 -->
+		
 
-			<!-- #sec2 -->
+		<!-- #sec3 -->
+		
 
-			<!-- #sec3 -->
-	
+		<!-- #sec4 -->
+		<div id="sec4" class="ptb60">
+			<div class="cols gutter-20 ta-l">
+				<section class="col-4 col-md-6">
+					<a href="/nagoya-meito" class="ptb20 sm-ptb15 plr10 bb-black bt-black d-b btn-ar"><h3>名古屋名東教室</h3></a>
+				</section>
+				<section class="col-4 col-md-6">
+					<a href="/nagoya-minato" class="ptb20 sm-ptb15 plr10 bb-black bt-black d-b btn-ar"><h3>名古屋みなと教室</h3></a>
+				</section>
+				<section class="col-4 col-md-6 md-mt30">
+					<a href="/okazaki-onishi" class="ptb20 sm-ptb15 plr10 bb-black bt-black d-b btn-ar"><h3>岡崎大西教室</h3></a>
+				</section>
+				<section class="col-4 col-md-6 mt30">
+					<a href="/okazaki-yahagi" class="ptb20 sm-ptb15 plr10 bb-black bt-black d-b btn-ar"><h3>岡崎矢作教室</h3></a>
+				</section>
+				<section class="col-4 col-md-6 mt30">
+					<a href="/kariya" class="ptb20 sm-ptb15 plr10 bb-black bt-black d-b btn-ar"><h3>刈谷アピタ教室</h3></a>
+				</section>
+				<section class="col-4 col-md-6 mt30">
+					<a href="/anjyo" class="ptb20 sm-ptb15 plr10 bb-black bt-black d-b btn-ar"><h3>安城今池教室</h3></a>
+				</section>
+				<section class="col-4 col-md-6 mt30">
+					<a href="/gamagori" class="ptb20 sm-ptb15 plr10 bb-black bt-black d-b btn-ar"><h3>蒲郡教室</h3></a>
+				</section>
+			</div>
+		</div>
+
 	</section>
 </main>
 
