フォーム修正

--- a/html/B_application.html
+++ b/html/B_application.html
@@ -366,7 +366,7 @@
 								</tr>
 								<!--〓〓〓〓〓 -->
 								<tr>
-									<th><span class="c-red">＊</span> ご質問、ご要望などがあればご記入ください</th>
+									<th>ご質問、ご要望などがあればご記入ください</th>
 									<td>
 										<textarea name="ご質問、ご要望など" rows="30" cols="60"></textarea>
 									</td>
