コーディング修正

--- a/html/22_nagoya-meito.html
+++ b/html/22_nagoya-meito.html
@@ -181,7 +181,7 @@
 					<p class="ff-en fz270 lh100">studio rental</p>
 					<h2 class="fz110 sm-fz100 mt10">スタジオレンタルについて</h2>
 				</div>
-				<section class="col-6 col-sm-12 mt50 sm-mt30 view view-slideup ord2 sm-ord3">
+				<div class="col-6 col-sm-12 mt50 sm-mt30 view view-slideup ord2 sm-ord3">
 					<div class="bgc-white p40 md-p30 bdrs15 h-eq">
 						<ul class="li-dots">
 							<li>バンドスタジオ（8畳）</li>
@@ -203,11 +203,11 @@
 							</tbody>
 						</table>
 					</div>
-				</section>
-				<section class="col-6 col-sm-12 mt50 sm-mt30 view view-slideup ord3 sm-ord2">
+				</div>
+				<div class="col-6 col-sm-12 mt50 sm-mt30 view view-slideup ord3 sm-ord2">
 					<figure><img src="../img/nagoya-meito/sec3-img1.jpg" width="469" height="350" class="img-rspsv-full" alt="スタジオレンタルについて"></figure>
-				</section>
-				<section class="col-6 col-sm-12 mt30 view view-slideup ord4">
+				</div>
+				<div class="col-6 col-sm-12 mt30 view view-slideup ord4">
 					<div class="bgc-white p40 md-p30 bdrs15 h-eq">
 						<ul class="li-dots">
 							<li>ドラム個人スタジオ</li>
@@ -227,8 +227,8 @@
 							</tbody>
 						</table>
 					</div>
-				</section>
-				<section class="col-6 col-sm-12 mt30 view view-slideup ord5">
+				</div>
+				<div class="col-6 col-sm-12 mt30 view view-slideup ord5">
 					<div class="bgc-white p40 md-p30 bdrs15 h-eq">
 						<ul class="li-dots">
 							<li>アップライトピアノルーム</li>
@@ -248,7 +248,7 @@
 							</tbody>
 						</table>
 					</div>
-				</section>
+				</div>
 				<div class="col-12 mt50 ord6">
 					<p class="fz90">※グランドピアノ＝カワイGE20<br>
 						※個人練習（一人で入室の方）は半額にてご利用いただけます。（予約日の前日から予約可能）<br>
