--- a/html/31_trial.html
+++ b/html/31_trial.html
@@ -116,9 +116,9 @@
 						</div>
 					</div>
 				</div>
-
-				<div id="sec2" class="cols gutter-40 mt100 sm-mt70">
-					<div class="col-12">
+				<!-- sub1 -->
+				<div class="cols gutter-40">
+					<div class="col-12 mt100 sm-mt70">
 						<div class="bg-dots p60 md-p50 sm-p25">
 							<div class="cols nega gutter-50 gutter-md-40 gutter-sm-30">
 								<section class="col-6 col-md-12 view view-slideup">
