--- a/html/27_anjyo.html
+++ b/html/27_anjyo.html
@@ -95,7 +95,7 @@
 			<div class="col-5 col-sm-10 sm-mt-30 view view-slideup ord1 sm-ord2 z2">
 				<figure><img src="../img/anjyo/sec1-img1.png" width="388" height="379" class="img-rspsv" alt="安城今池教室"></figure>
 			</div>
-			<div class="col-8 col-sm-12 return-1 return-sm-0 view view-slideup ord2 sm-ord1 z1">
+			<div class="col-8 col-sm-12 return-1 return-sm-0 view view-slideup ord2 sm-ord1 z1 mt40 sm-mt0">
 				<div class="bgc-white bdrs15 pt70 pb70 sm-pt40 pr70 pl100 md-pr50 md-pl70 sm-pl30 sm-pr30">
 					<div class="d-f sm-d-b ai-c">
 						<h2 class="fz180 sm-fz130">安城今池教室</h2>
@@ -107,8 +107,68 @@
 		</section>
 					
 		<!-- #sec2 -->
+		<section id="sec2" class="bg-dots mt120 pb100 sm-pb50 mb130 md-mb100 sm-mb80">
+			<div class="cols gutter-30 gutter-sm-40 jc-c">
+				<div class="col-12 ta-c view view-slideup">
+					<div class="mt-40 md-mt-30 sm-mt-20 d-ib">
+						<p class="ff-en fz300 sm-fz240 lh180">school data</p>
+						<h2>教室情報</h2>
+						<img src="../img/base/ic-dot.png" width="20" height="5" class="img-rspsv" alt="dot">
+					</div>
+				</div>
+				<div class="col-12 view view-slideup">
+					<table class="tbl-basic mt50 sm-mt40">
+						<tbody>
+							<tr>
+								<th>部屋数</th>
+								<td>2部屋　全室禁煙</td>
+							</tr>
+							<tr>
+								<th>出店地</th>
+								<td>RADIO CLUB</td>
+							</tr>
+							<tr>
+								<th>住所</th>
+								<td>愛知県安城市今池町1-13-1 3F<br class="d-n sm-d-b">（名鉄本線「新安城駅」より徒歩2分）<br>
+									<a href="https://goo.gl/maps/FGdeFMQDKQuNvpRy8" class="hov bb-black pb5" target="_blank">→ Googlemap</a></td>
+							</tr>
+							<tr>
+								<th>電話番号 / FAX</th>
+								<td><a href="tel:0120082349" class="tel-link hov">0120-082-349</a></td>
+							</tr>
+							<tr>
+								<th>スタッフ常駐時間</th>
+								<td>※ご来店の際は必ずお電話にてご予約を頂いてからお越しください。</td>
+							</tr>
+						</tbody>
+					</table>
+					<section class="mt80 sm-mt50 bgc-gray bd-blue ptb60 plr60 md-ptb50 md-plr15 sm-ptb50 sm-plr30 bdrs15 fuchi-upper">
+						<div class="cols nega lesson-ok-il">
+							<div class="col-4 col-sm-12">
+								<h3 class="ribbon-green -gray">レッスン可能コース</h3>
+							</div>
+							<div class="col-8 col-sm-12 sm-mt25">
+								<p>ギター、ベース、ドラム、ウクレレ<br class="md-d-n">（平日のみ営業）</p>
+							</div>
+						</div>
+					</section>
+					<div class="embed-16-9 mt100 sm-mt70">
+						<iframe class="embed-item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52299.533586948026!2d137.0096415985554!3d34.988656347808174!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x600499c4f2f94cdf%3A0x32a4c67a01ce8d3f!2zUkFESU8gQ0xVQiDlronln47ku4rmsaDmlZnlrqQ!5e0!3m2!1sja!2sjp!4v1639448396245!5m2!1sja!2sjp" width="446" height="416" style="border:0;filter:grayscale(60%);-webkit-filter:grayscale(60%)" allowfullscreen></iframe>
+					</div>
+				</div>
+			</div>
+		</section>
 
 		<!-- #sec3 -->
+		<section id="sec3" class="ptb100 sm-ptb70 bgc-lightgray">
+			<div class="cols">
+				<div class="col-12 ord1">
+					<p class="ff-en fz270 lh100">studio rental</p>
+					<h2 class="fz110 sm-fz100 mt10">スタジオレンタルについて</h2>
+					<p class="mt50 sm-mt30">※当教室を通じてのスタジオレンタル予約は行っておりません。</p>
+				</div>
+			</div>
+		</section>
 
 		<!-- #sec4 -->
 		<div id="sec4" class="ptb60">
