--- a/html/22_nagoya-meito.html
+++ b/html/22_nagoya-meito.html
@@ -124,7 +124,7 @@
 				<div class="col-12 ta-c view view-slideup">
 					<div class="mt-40 md-mt-30 sm-mt-20 d-ib">
 						<p class="ff-en fz300 sm-fz240 lh180">school data</p>
-						<h2>school data</h2>
+						<h2>教室情報</h2>
 						<img src="../img/base/ic-dot.png" width="20" height="5" class="img-rspsv" alt="dot">
 					</div>
 				</div>
@@ -142,7 +142,7 @@
 							<tr>
 								<th>住所</th>
 								<td>愛知県名古屋市名東区牧の里1-111<br class="d-n sm-d-b">（旧ジュークボックス）<br>
-									<a href="" class="hov bb-black pb5" target="_blank">→ Googlemap</a></td>
+									<a href="https://goo.gl/maps/L6c3Es8Ga18WsVEeA" class="hov bb-black pb5" target="_blank">→ Googlemap</a></td>
 							</tr>
 							<tr>
 								<th>電話番号 / FAX</th>
@@ -177,7 +177,7 @@
 		<!-- #sec3 -->
 		<section id="sec3" class="ptb100 sm-ptb70 bgc-lightgray">
 			<div class="cols">
-				<div class="col-12 ord1">
+				<div class="col-12 view view-slideup ord1">
 					<p class="ff-en fz270 lh100">studio rental</p>
 					<h2 class="fz110 sm-fz100 mt10">スタジオレンタルについて</h2>
 				</div>
@@ -238,7 +238,7 @@
 								<tr>
 									<th>平日<br class="sm-d-n">
 										<span class="fz80">(15：00～17：00)</span></th>
-									<td>900 / 1時間</td>
+									<td>¥900 / 1時間</td>
 								</tr>
 								<tr>
 									<th>土日祝・平日<br class="sm-d-n">
@@ -249,8 +249,8 @@
 						</table>
 					</div>
 				</div>
-				<div class="col-12 mt50 ord6">
-					<p class="fz90">※グランドピアノ＝カワイGE20<br>
+				<div class="col-12 mt50 ord6 view view-slideup">
+					<p class="fz90">※グランドピアノルーム＝ヤマハG1<br>
 						※個人練習（一人で入室の方）は半額にてご利用いただけます。（予約日の前日から予約可能）<br>
 						※生徒さんは特別価格にてご利用いただけます。</p>
 				</div>
