--- a/html/23_nagoya-minato.html
+++ b/html/23_nagoya-minato.html
@@ -118,8 +118,143 @@
 		</section>
 					
 		<!-- #sec2 -->
+		<section id="sec2" class="bg-dots mt120 pb100 sm-pb50 mb130 md-mb100 sm-mb80">
+			<div class="cols gutter-30 gutter-sm-40 jc-c">
+				<div class="col-12 ta-c view view-slideup">
+					<div class="mt-40 md-mt-30 sm-mt-20 d-ib">
+						<p class="ff-en fz300 sm-fz240 lh180">school data</p>
+						<h2>教室情報</h2>
+						<img src="../img/base/ic-dot.png" width="20" height="5" class="img-rspsv" alt="dot">
+					</div>
+				</div>
+				<div class="col-12 view view-slideup">
+					<table class="tbl-basic mt50 sm-mt40">
+						<tbody>
+							<tr>
+								<th>部屋数</th>
+								<td>7室　全室禁煙</td>
+							</tr>
+							<tr>
+								<th>出店地</th>
+								<td>ポートウォークみなと3階（アピタ港店）</td>
+							</tr>
+							<tr>
+								<th>住所</th>
+								<td>愛知県名古屋市港区当知2丁目1501番地<br>
+									<a href="https://goo.gl/maps/NKUiMVcWK92Ps8W3A" class="hov bb-black pb5" target="_blank">→ Googlemap</a></td>
+							</tr>
+							<tr>
+								<th>電話番号 / FAX</th>
+								<td><a href="tel:0523556349" class="tel-link hov">052-355-6349</a></td>
+							</tr>
+							<tr>
+								<th>スタッフ常駐時間</th>
+								<td>平日 12：00～19：00<br>
+									土日 10：00～18：00<br>
+									<span class="fz80">※レッスン可能時間はこの限りではありません<br>
+									※上記時間内でもスタッフ不在の場合がございます。ご来店の際は必ずお電話をいただいてからお越しください。</span></td>
+							</tr>
+						</tbody>
+					</table>
+					<section class="mt80 sm-mt50 bgc-gray bd-blue ptb60 plr60 md-ptb50 md-plr15 sm-ptb50 sm-plr30 bdrs15 fuchi-upper">
+						<div class="cols nega lesson-ok-il">
+							<div class="col-4 col-sm-12">
+								<h3 class="ribbon-green -gray">レッスン可能コース</h3>
+							</div>
+							<div class="col-8 col-sm-12 sm-mt25">
+								<p>ピアノ・ボーカル・ギター・ベース・ドラム・キーボード・ウクレレ・バイオリン・チェロ・ビオラ・フルート・サックス・トランペット・トロンボーン・クラリネット・声楽・作詞作曲</p>
+							</div>
+						</div>
+					</section>
+					<div class="embed-16-9 mt100 sm-mt70">
+						<iframe class="embed-item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3263.8876833070112!2d136.8455382518565!3d35.10951538023521!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x600378211cda41eb%3A0x6dfd8f7c864a69ee!2z44OR44OU44O844Of44Ol44O844K444OD44Kv44K544Kv44O844OrIOWQjeWPpOWxi-a4r-aVmeWupA!5e0!3m2!1sja!2sjp!4v1639446875063!5m2!1sja!2sjp" width="446" height="416" style="border:0;filter:grayscale(60%);-webkit-filter:grayscale(60%)" allowfullscreen></iframe>
+					</div>
+				</div>
+			</div>
+		</section>
 
 		<!-- #sec3 -->
+		<section id="sec3" class="ptb100 sm-ptb70 bgc-lightgray">
+			<div class="cols">
+				<div class="col-12 view view-slideup ord1">
+					<p class="ff-en fz270 lh100">studio rental</p>
+					<h2 class="fz110 sm-fz100 mt10">スタジオレンタルについて</h2>
+				</div>
+				<div class="col-6 col-sm-12 mt50 sm-mt30 view view-slideup ord2 sm-ord3">
+					<div class="bgc-white p40 md-p30 bdrs15 h-eq">
+						<ul class="li-dots">
+							<li>バンドスタジオ（9畳）</li>
+							<li>グランドピアノルーム（7畳）	</li>
+						</ul>
+						<table class="tbl-basic mt20 va-m p-small">
+							<tbody>
+								<tr>
+									<th>平日<br class="sm-d-n">
+										<span class="fz80">(12：00～17：00)</span></th>
+									<td>¥1,300 / 1時間</td>
+								</tr>
+								<tr>
+									<th>土日祝・平日<br class="sm-d-n">
+										<span class="fz80">(17：00～20：50)</span></th>
+									<td>¥1,800 / 1時間</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+				</div>
+				<div class="col-6 col-sm-12 mt50 sm-mt30 view view-slideup ord3 sm-ord2">
+					<figure><img src="../img/nagoya-minato/sec3-img1.jpg" width="469" height="350" class="img-rspsv-full" alt="スタジオレンタルについて"></figure>
+				</div>
+				<div class="col-6 col-sm-12 mt30 view view-slideup ord4">
+					<div class="bgc-white p40 md-p30 bdrs15 h-eq">
+						<ul class="li-dots">
+							<li>ドラム個人スタジオ（5畳）</li>
+						</ul>
+						<table class="tbl-basic mt20 va-m p-small">
+							<tbody>
+								<tr>
+									<th>平日<br class="sm-d-n">
+										<span class="fz80">(12：00～17：00)</span></th>
+									<td>¥1,100 / 1時間</td>
+								</tr>
+								<tr>
+									<th>土日祝・平日<br class="sm-d-n">
+										<span class="fz80">(17：00～20：50)</span></th>
+									<td>¥1,600 / 1時間</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+				</div>
+				<div class="col-6 col-sm-12 mt30 view view-slideup ord5">
+					<div class="bgc-white p40 md-p30 bdrs15 h-eq">
+						<ul class="li-dots">
+							<li>アップライトピアノルーム</li>
+						</ul>
+						<table class="tbl-basic mt20 va-m p-small">
+							<tbody>
+								<tr>
+									<th>平日<br class="sm-d-n">
+										<span class="fz80">(12：00～17：00)</span></th>
+									<td>¥900 / 1時間</td>
+								</tr>
+								<tr>
+									<th>土日祝・平日<br class="sm-d-n">
+										<span class="fz80">(17：00～20：50)</span></th>
+									<td>¥1,100 / 1時間</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+				</div>
+				<div class="col-12 mt50 ord6 view view-slideup">
+					<p class="fz90">※グランドピアノ＝ディアパソン<br>
+						※個人練習（一人で入室の方）は半額にてご利用いただけます。（予約日の前日から予約可能）<br>
+						※生徒さんは特別価格にてご利用いただけます。</p>
+				</div>
+			</div>
+		</section>
+
 
 		<!-- #sec4 -->
 		<div id="sec4" class="ptb60">
