--- a/html/28_gamagori.html
+++ b/html/28_gamagori.html
@@ -106,11 +106,62 @@
 				<figure><img src="../img/gamagori/sec1-img1.png" width="388" height="379" class="img-rspsv" alt="蒲郡教室"></figure>
 			</div>
 		</section>
-					
+							
 		<!-- #sec2 -->
-		
+		<section id="sec2" class="bg-dots mt120 pb100 sm-pb50 mb130 md-mb100 sm-mb80">
+			<div class="cols gutter-30 gutter-sm-40 jc-c">
+				<div class="col-12 ta-c view view-slideup">
+					<div class="mt-40 md-mt-30 sm-mt-20 d-ib">
+						<p class="ff-en fz300 sm-fz240 lh180">school data</p>
+						<h2>教室情報</h2>
+						<img src="../img/base/ic-dot.png" width="20" height="5" class="img-rspsv" alt="dot">
+					</div>
+				</div>
+				<div class="col-12 view view-slideup">
+					<table class="tbl-basic mt50 sm-mt40">
+						<tbody>
+							<tr>
+								<th>出店地</th>
+								<td>パピーミュージックスクール蒲郡教室（カラオケ店舗内）</td>
+							</tr>
+							<tr>
+								<th>住所</th>
+								<td>愛知県蒲郡市竹谷町<br class="d-n sm-d-b">（東海道線「三河塩津駅」より徒歩6分）<br>
+									<a href="https://goo.gl/maps/cdNyytnyrM4Xn7ZH7" class="hov bb-black pb5" target="_blank">→ Googlemap</a></td>
+							</tr>
+							<tr>
+								<th>電話番号 / FAX</th>
+								<td><a href="tel:0120082349" class="tel-link hov">0120-082-349</a>（パピーミュージックスクール本部）</td>
+							</tr>
+						</tbody>
+					</table>
+					<section class="mt80 sm-mt50 bgc-gray bd-blue ptb60 plr60 md-ptb50 md-plr15 sm-ptb50 sm-plr30 bdrs15 fuchi-upper">
+						<div class="cols nega lesson-ok-il">
+							<div class="col-4 col-sm-12">
+								<h3 class="ribbon-green -gray">レッスン可能コース</h3>
+							</div>
+							<div class="col-8 col-sm-12 sm-mt25">
+								<p>ボーカル、ギター、ベース、ウクレレ<br class="md-d-n">（月曜のみ営業）</p>
+							</div>
+						</div>
+					</section>
+					<div class="embed-16-9 mt100 sm-mt70">
+						<iframe class="embed-item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3275.2186540962803!2d137.2059854518524!3d34.82559458030661!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6004c0b174a73a9f%3A0xc926155f061fb048!2z44CSNDQzLTAwNDYg5oSb55-l55yM6JKy6YOh5biC56u56LC355S65qKF6Jau77yS77yU4oiS77yR!5e0!3m2!1sja!2sjp!4v1639448747008!5m2!1sja!2sjp" width="446" height="416" style="border:0;filter:grayscale(60%);-webkit-filter:grayscale(60%)" allowfullscreen></iframe>
+					</div>
+				</div>
+			</div>
+		</section>
 
 		<!-- #sec3 -->
+		<section id="sec3" class="ptb100 sm-ptb70 bgc-lightgray">
+			<div class="cols">
+				<div class="col-12 ord1">
+					<p class="ff-en fz270 lh100">studio rental</p>
+					<h2 class="fz110 sm-fz100 mt10">スタジオレンタルについて</h2>
+					<p class="mt50 sm-mt30">※スタジオレンタルは行っておりません。</p>
+				</div>
+			</div>
+		</section>
 		
 
 		<!-- #sec4 -->
